= Version 2.0 (August 2011)
== Notes
The big features on this release are:
* Progress Window
* User settable Headers

You will now see how far Efficiency Assist has processed your file with a progress bar. Once EA has finished, the total quantity and total quantity of boxes will be displayed

You will now be able to set your own header values. Meaning, if you come across a header that is spelled differently for 'Address', you will now be able to insert that variation so EA will assign it to the correct field.

== New Features
* Progress window and stat display
* Enter or Import 3rd party codes
* Changelog and About window has been implemented.
* Set a 3rd Party Acct Number (Importable)
* Set a Contact and Email Address (Importable) - Currently does not allow the user type in the values. Must be imported.
* Displays your current file name
* Headers now are user-settable

== Bug Fixes
* Correctly imports headers with spaces before or after the name.
* Fixed Reset to work properly
# Leading zero on zip codes partially works
# Will not add additional leading zero's. (i.e. 0993 vs 00993)



--
= Version 1.0 (June 7th, 2011)

This was the first basic production ready version available.
Basic features useable. Works on simple lists.
Presented to Journal Graphics Management